test/parser/let.error.3.err
EXPECTED_EXPRESSION[1010] in test/parser/let.error.3.pytch, line 1, character 10:
Error: I was expecting a value after the '=' in this let-binding.
   +------------------------------------------------------------------------------+
   | test/parser/let.error.3.pytch                                                |
 1 | let foo =                                                                    |
   |          ^ Error: I was expecting a value after the '=' in this let-binding. |
   | ^~~ Note: This is the beginning of the let-binding.                          |
   +------------------------------------------------------------------------------+
